# release-risk-notes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: release.txt
src/release_risk_notes/: __init__.py  __main__.py  analyzer.py  cli.py  models.py
tests/: test_release_risk_notes.py
